[tool.poetry]
name = "bluesky-crawler"
version = "0.1.0"
description = "the crawler for bluesky"
authors = ["Keiya Sato <sato-keiya@ed.tmu.ac.jp>"]
readme = "README.md"
packages = [{include = "bluesky_crawler"}]

[tool.poetry.dependencies]
python = "^3.10,<3.13"
atproto = "^0.0.30"
loguru = "^0.7.2"
pydantic = {extras = ["dotenv"], version = "^2.4.2"}
pydantic-settings = "^2.0.3"


[tool.poetry.group.dev.dependencies]
pyproject-flake8 = "^6.1.0"
black = "^23.11.0"
isort = "^5.12.0"

[tool.flake8]
max-line-length = 125
extend-ignore = ["E203", "E231", "E741", "W505"]
max-complexity = 10

[tool.black]
line-length = 100
include = '\.pyi?$'
skip-string-normalization = true

[tool.isort]
include_trailing_comma = true
profile = "black"
skip_gitignore = true
combine_as_imports = true
combine_star = true
line_length = 100
multi_line_output = 3

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
